// Vitest Snapshot v1

exports[`Popup > Popup baseVue demo works fine 1`] = `
<t-space>
  <t-space>
    <t-popup
      content="可以在浮层内容中描述禁用原因"
    >
      <t-button
        disabled=""
        variant="outline"
      >
        禁用状态
      </t-button>
    </t-popup>
  </t-space>
  <t-space>
    <t-popup>
      <t-button
        variant="outline"
      >
        触发元素
      </t-button>
    </t-popup>
  </t-space>
  <t-space>
    <t-popup
      content="function () { [native code] }"
    >
      <t-button
        variant="outline"
      >
        浮层内容
      </t-button>
    </t-popup>
  </t-space>
</t-space>
`;

exports[`Popup > Popup containerVue demo works fine 1`] = `
<t-space>
  <t-space>
    <t-popup
      attach="#myPopup"
      content="触发元素的父元素是组件根元素，通过 CSSSelector 定义"
    >
      <div
        id="myPopup"
      >
        <t-button
          variant="outline"
        >
          父元素为组件本身
        </t-button>
      </div>
    </t-popup>
  </t-space>
  <t-space
    id="second-popup"
  >
    <t-popup
      attach="function () { [native code] }"
      content="触发元素的父元素是组件跟元素，通过 Function 定义"
    >
      <t-button
        variant="outline"
      >
        父元素为其他元素
      </t-button>
    </t-popup>
  </t-space>
</t-space>
`;

exports[`Popup > Popup destroyVue demo works fine 1`] = `
<div>
  <t-popup
    content="当浮层内容被隐藏时，就会从 DOM 节点中移除"
    destroyonclose=""
  >
    <t-button
      variant="outline"
    >
      隐藏即销毁
    </t-button>
  </t-popup>
</div>
`;

exports[`Popup > Popup disabledVue demo works fine 1`] = `
<div>
  <t-popup
    content="我被禁用了，无法显示"
    disabled=""
  >
    <t-button
      disabled=""
      variant="outline"
    >
      禁用浮层显示
    </t-button>
  </t-popup>
</div>
`;

exports[`Popup > Popup placementVue demo works fine 1`] = `
<div
  class="container"
  data-v-b59115c6=""
>
  <t-popup
    class="placement top center"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="top"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       top 
    </t-button>
  </t-popup>
  <t-popup
    class="placement top left"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="top-left"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       top-left 
    </t-button>
  </t-popup>
  <t-popup
    class="placement top right"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="top-right"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       top-right 
    </t-button>
  </t-popup>
  <t-popup
    class="placement bottom center"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="bottom"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       bottom 
    </t-button>
  </t-popup>
  <t-popup
    class="placement bottom left"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="bottom-left"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       bottom-left 
    </t-button>
  </t-popup>
  <t-popup
    class="placement bottom right"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="bottom-right"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       bottom-right 
    </t-button>
  </t-popup>
  <t-popup
    class="placement align"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="left"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       left 
    </t-button>
  </t-popup>
  <t-popup
    class="placement top-align"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="left-top"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       left-top 
    </t-button>
  </t-popup>
  <t-popup
    class="placement bottom-align"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="left-bottom"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       left-bottom 
    </t-button>
  </t-popup>
  <t-popup
    class="placement right-full align"
    content="这是popup内容"
    data-v-b59115c6=""
    destroyonclose=""
    placement="right"
    showarrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       right 
    </t-button>
  </t-popup>
  <t-popup
    class="placement right-full top-align"
    content="这是popup内容"
    data-v-b59115c6=""
    destroy-on-hide=""
    placement="right-top"
    show-arrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       right-top 
    </t-button>
  </t-popup>
  <t-popup
    class="placement right-full bottom-align"
    content="这是popup内容"
    data-v-b59115c6=""
    destroy-on-hide=""
    placement="right-bottom"
    show-arrow=""
  >
    <t-button
      data-v-b59115c6=""
      variant="outline"
    >
       right-bottom 
    </t-button>
  </t-popup>
</div>
`;

exports[`Popup > Popup styleVue demo works fine 1`] = `
<t-space>
  <t-popup
    content="浮层拥有自定义类名，可以自定义浮层样式"
    overlayclassname="tdesign-demo__custom-popup"
    placement="bottom"
  >
    <t-button
      variant="outline"
    >
      自定义浮层类名
    </t-button>
  </t-popup>
  <t-popup
    content="浮层宽度是固定的，不会随内容变化而变化"
    overlayinnerstyle="[object Object]"
    placement="bottom"
  >
    <t-button
      variant="outline"
    >
      固定浮层宽度
    </t-button>
  </t-popup>
  <t-popup
    content="可以设置浮层最大宽度，当内容超出最大宽度时，文本内容才会换行"
    overlaystyle="[object Object]"
    placement="bottom"
  >
    <t-button
      variant="outline"
    >
      浮层最大宽度
    </t-button>
  </t-popup>
  <t-popup
    content="overlayInnerStyle 作为函数使用，可以让浮层内容和触发元素同宽"
    overlayinnerstyle="function (triggerElem) { return ({ width: ((triggerElem.offsetWidth) + \\"px\\") }); }"
    placement="bottom"
  >
    <t-button
      variant="outline"
    >
      浮层和触发元素同宽
    </t-button>
  </t-popup>
</t-space>
`;

exports[`Popup > Popup triggerElementVue demo works fine 1`] = `
<t-space
  data-v-c5c5cdc2=""
  direction="vertical"
>
  <t-space
    data-v-c5c5cdc2=""
  >
    <t-space
      data-v-c5c5cdc2=""
    >
      <t-popup
        content="我的触发元素通过默认插槽渲染"
        data-v-c5c5cdc2=""
      >
        <t-button
          data-v-c5c5cdc2=""
          variant="outline"
        >
          默认插槽定义触发元素
        </t-button>
      </t-popup>
    </t-space>
    <t-space
      data-v-c5c5cdc2=""
    >
      <t-popup
        content="我的触发元素通过插槽(triggerElement)渲染"
        data-v-c5c5cdc2=""
      >
        <t-button
          data-v-c5c5cdc2=""
          slot="triggerElement"
          variant="outline"
        >
          具名插槽定义触发元素
        </t-button>
      </t-popup>
    </t-space>
  </t-space>
  <t-space
    data-v-c5c5cdc2=""
  >
    <t-space
      data-v-c5c5cdc2=""
    >
      <t-popup
        content="我的触发元素通过渲染函数 default 渲染"
        data-v-c5c5cdc2=""
        default="function () { [native code] }"
      />
    </t-space>
    <t-space
      data-v-c5c5cdc2=""
    >
      <t-popup
        content="我的触发元素通过渲染函数 triggerElement 渲染"
        data-v-c5c5cdc2=""
        triggerelement="function () { [native code] }"
      />
    </t-space>
  </t-space>
</t-space>
`;

exports[`Popup > Popup triggerVue demo works fine 1`] = `
<t-space>
  <t-popup
    content="文字提示仅展示文本内容"
    destroyonclose=""
  >
    <t-button
      variant="outline"
    >
      悬浮时触发（默认）
    </t-button>
  </t-popup>
  <t-popup
    content="文字提示仅展示文本内容"
    destroyonclose=""
    trigger="click"
  >
    <t-button
      variant="outline"
    >
      点击时触发
    </t-button>
  </t-popup>
  <t-popup
    content="文字提示仅展示文本内容"
    destroyonclose=""
    trigger="focus"
  >
    <t-input
      placeholder="获得焦点时触发"
    />
  </t-popup>
  <t-popup
    content="文字提示仅展示文本内容"
    destroyonclose=""
    trigger="context-menu"
  >
    <t-button
      variant="outline"
    >
      右击时触发
    </t-button>
  </t-popup>
</t-space>
`;

exports[`Popup > Popup visibleVue demo works fine 1`] = `
<div>
  <t-popup>
    <t-button
      variant="outline"
    >
      点击控制浮层显示
    </t-button>
  </t-popup>
</div>
`;
